# immoscout-api-client

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
immoscout_api_client/: __init__.py  client.py  exceptions.py  url_utils.py
tests/: test_url_conversion.py
